--- a/.github/actions/test/test/action.yml
+++ b/.github/actions/test/test/action.yml
@@ -14,11 +14,33 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Print Inputs
+    - name: update REGION & ECR_ID variable
       shell: bash
       run: |
-        echo "${{ inputs.WEBHOOK }}"
-        echo "${{ inputs.TITLE }}"
-        echo "${{ inputs.MESSAGE }}"
+        if [ "${{ !contains( github.repository, '/README' ) }}" = "true" ]; then
+          echo "Not a MultiRegion Deployment, Skipping this step"
+        elif [ "${{ env.INPUT_REGION }}" = "Tokyo" ]; then
+          echo "REGION=ap-northeast-1" >> $GITHUB_ENV
+          echo "ECR_ID=917773493034.dkr.ecr.ap-northeast-1.amazonaws.com" >> $GITHUB_ENV
+        elif [ "${{ env.INPUT_REGION }}" = "Seoul" ]; then
+          echo "REGION=ap-northeast-2" >> $GITHUB_ENV
+          echo "ECR_ID=917773493034.dkr.ecr.ap-northeast-2.amazonaws.com" >> $GITHUB_ENV
+        elif [ "${{ env.INPUT_REGION }}" = "Oregon" ]; then
+          echo "REGION=us-west-2" >> $GITHUB_ENV
+          echo "ECR_ID=917773493034.dkr.ecr.us-west-2.amazonaws.com" >> $GITHUB_ENV
+        elif [ "${{ env.INPUT_REGION }}" = "Frankfurt" ]; then  
+          echo "REGION=eu-central-1" >> $GITHUB_ENV
+          echo "ECR_ID=917773493034.dkr.ecr.eu-central-1.amazonaws.com" >> $GITHUB_ENV
+        else
+          echo "Error : Please select a region for MultiRegion Deployment and try again"
+          exit 1
+        fi
+
+    - name: print REGION, ECR_ID
+      shell: bash
+      run: |
+        echo "${{ env.REGION }}"
+        echo "${{ env.ECR_ID }}"
+        
 
 
